--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
   "dependencies": {
     "dotenv": "^2.0.0",
     "eth-lightwallet": "^2.5.6",
-    "material-ui": "^0.19.4",
+    "material-ui": "^1.0.0-beta.18",
     "mui": "0.0.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2"
